getting logs endpoint created
